# sql

./: .travis.yml  Cargo.toml  LICENSE.md  README.md
src/: grammar.rs  language.rs  lib.rs  prelude.rs
src/clause/: mod.rs  order_by.rs
src/definition/: column.rs  mod.rs
src/expression/: like.rs  mod.rs
src/grammar/: mod.rs
src/grammar/clause/: mod.rs  order_by.rs  where.rs
src/grammar/definition/: column.rs
src/grammar/operation/: like.rs
src/grammar/statement/: create_table.rs  delete.rs  delete_from.rs  insert.rs  insert_into.rs  mod.rs  select.rs  select_from.rs
src/operation/: like.rs  mod.rs
src/operator/: like.rs  mod.rs
src/statement/: create_table.rs  insert_into.rs  mod.rs  select.rs  select_from.rs
