[package]
name = "sql"
version = "0.4.2"
license = "Apache-2.0/MIT"
authors = ["Ivan Ukhov <ivan.ukhov@gmail.com>"]
description = "The package provides a constructor of SQL statements."
documentation = "https://docs.rs/sql"
homepage = "https://github.com/stainless-steel/sql"
repository = "https://github.com/stainless-steel/sql"
